@@ -3,108 +3,43 @@ require 'rbconfig'
 
 # # # load on startup
 
-Irbtools.add_library :yaml
+Irbtools.add_library 'yaml'
 
 
 # # # load via thread
 
-# ls, cat, rq, rrq, ld, session_history, reset!, clear, dbg, ...
-Irbtools.add_library 'every_day_irb', :thread => :stdlib do
+Irbtools.add_library 'every_day_irb', thread: :stdlib do
   include FileUtils::Verbose
   extend EveryDayIrb
 end
 
-# print debugging helpers
-Irbtools.add_library 'debugging/q', :thread => 21
-Irbtools.add_library 'debugging/mof', :thread => 22
-Irbtools.add_library 'debugging/re', :thread => 23
-Irbtools.add_library 'debugging/beep', :thread => 24
-Irbtools.add_library 'debugging/howtocall', :thread => 25
-Irbtools.add_library 'instance', :thread => 30
-Irbtools.add_library 'g', :thread => 40 if RbConfig::CONFIG['host_os'] =~ /mac|darwin/
+Irbtools.add_library 'interactive_editor',  thread: :stdlib
 
-# lets you open vim (or your favourite editor), hack something, save it, and it's loaded in the current irb session
-Irbtools.add_library 'interactive_editor', :thread => :stdlib
+Irbtools.add_library 'paint/pa', thread: :paint
 
-# object oriented ri method
-Irbtools.add_library :ori, :thread => 50 do
-  class Object
-    # patch ori to also allow shell-like "Array#slice" syntax
-    def ri(*args)
-      if  args[0] &&
-          self == TOPLEVEL_BINDING.eval('self') &&
-          args[0] =~ /\A(.*)(?:#|\.)(.*)\Z/
-        begin
-          klass = Object.const_get $1
-          klass.ri $2
-        rescue
-          super
-        end
-      else
-        super
-      end
-    end
-  end
-end
-
-# Object#method_lookup_path (improved ancestors) & Object#methods_for (get this method from all ancestors)
-Irbtools.add_library :method_locator, :thread => 60 do
-  module MethodLocator
-    alias mlp method_lookup_path
-  end
-end
-
-# view method source
-Irbtools.add_library :method_source, :thread => 70 do
-  class Object
-    def src(method_name)
-      m = method(method_name)
-
-      source   = m.source || ""
-      indent   = source.match(/\A +/)
-      comment  = m.comment && !m.comment.empty? ? "#{ m.comment }" : ""
-      location = m.source_location ? "# in #{ m.source_location*':' }\n" : ""
-
-      puts CodeRay.scan(
-        location + comment + source.gsub(/^#{indent}/,""), :ruby
-      ).term
-    rescue
-      raise unless $!.message =~ /Cannot locate source for this method/
-      nil
-    end
-
-    # alias source src # TODO activate this without warnings oO
-  end
-end
-
-
-# # # load via late
-
-# terminal colors
-Irbtools.add_library :paint, :late => true
-
-# result colors, install ripl-color_result for ripl colorization
-Irbtools.add_library :wirb, :late => true do
+Irbtools.add_library 'wirb/wp', thread: :paint do
   Wirb.start
 end
 
 unless defined?(Ripl) && Ripl.started?
-  # use hash rocket and colorful errors/streams
-  Irbtools.add_library :fancy_irb, :late => true do
+  Irbtools.add_library :fancy_irb, thread: :paint do
     FancyIrb.start
   end
 end
 
+Irbtools.add_library 'debugging/q',         thread: :paint
 
-# # # load via late_thread
+Irbtools.add_library 'debugging/mof',       thread: :paint
 
-Irbtools.add_library 'wirb/wp',  :late_thread => :a # ap alternative (wp)
-Irbtools.add_library 'paint/pa', :late_thread => :b # colorize a string (pa)
+Irbtools.add_library 'debugging/re',        thread: :paint
 
-# tables, menus...
-Irbtools.add_library :hirb, :late_thread => :hirb do
-  Hirb::View.enable :output => { "Object" => {:ancestor => true, :options => { :unicode => true }}},
-                    :pager_command => 'less -R'
+Irbtools.add_library 'debugging/beep',      thread: :paint
+
+Irbtools.add_library 'debugging/howtocall', thread: :paint
+
+Irbtools.add_library :hirb, thread: :paint do
+  Hirb::View.enable output: { "Object" => { ancestor: true, options: { unicode: true }}},
+                    pager_command: 'less -R'
   extend Hirb::Console
 
   def page(what, options = {})
@@ -143,10 +78,61 @@ Irbtools.add_library :hirb, :late_thread => :hirb do
   end
 end
 
+Irbtools.add_library 'instance', thread: 30
+
+Irbtools.add_library 'g', thread: 40 if RbConfig::CONFIG['host_os'] =~ /mac|darwin/
+
+Irbtools.add_library 'ori', thread: 50 do
+  class Object
+    # patch ori to also allow shell-like "Array#slice" syntax
+    def ri(*args)
+      if  args[0] &&
+          self == TOPLEVEL_BINDING.eval('self') &&
+          args[0] =~ /\A(.*)(?:#|\.)(.*)\Z/
+        begin
+          klass = Object.const_get $1
+          klass.ri $2
+        rescue
+          super
+        end
+      else
+        super
+      end
+    end
+  end
+end
+
+Irbtools.add_library 'method_locator', thread: 60 do
+  module MethodLocator
+    alias mlp method_lookup_path
+  end
+end
+
+Irbtools.add_library 'method_source', thread: 70 do
+  class Object
+    def src(method_name)
+      m = method(method_name)
+
+      source   = m.source || ""
+      indent   = source.match(/\A +/)
+      comment  = m.comment && !m.comment.empty? ? "#{ m.comment }" : ""
+      location = m.source_location ? "# in #{ m.source_location*':' }\n" : ""
+
+      puts CodeRay.scan(
+        location + comment + source.gsub(/^#{indent}/,""), :ruby
+      ).term
+    rescue
+      raise unless $!.message =~ /Cannot locate source for this method/
+      nil
+    end
+
+    # alias source src # TODO activate this without warnings oO
+  end
+end
+
 
 # # # load via autoload
 
-# information pseudo-constants
 Irbtools.add_library 'ruby_info', :autoload => :RubyInfo do
   def info() RubyInfo  end unless defined? info
 end
@@ -164,7 +150,6 @@ Irbtools.add_library 'ruby_version', :autoload => :RubyVersion do
 end
 
 
-# syntax highlight
 Irbtools.add_library :coderay, :autoload => :CodeRay do
   # ...a string
   def colorize(string)
@@ -177,7 +162,6 @@ Irbtools.add_library :coderay, :autoload => :CodeRay do
   end
 end
 
-# access the clipboard
 Irbtools.add_library :clipboard, :autoload => :Clipboard do
   # copies the clipboard
   def copy(str)
@@ -204,8 +188,7 @@ Irbtools.add_library :clipboard, :autoload => :Clipboard do
   alias copy_session_output copy_output
 end
 
-# small-talk like method finder
-Irbtools.add_library :methodfinder, :autoload => :MethodFinder do
+Irbtools.add_library :methodfinder, autoload: :MethodFinder do
   MethodFinder::INSTANCE_METHOD_BLACKLIST[:Object] += [:ri, :vi, :vim, :emacs, :nano, :mate, :mvim, :ed]
 
   def mf(*args, &block)
